@@ -4,11 +4,11 @@ $DEBUG_RDOC = nil
 # = \RDoc - Ruby Documentation System
 #
 # This package contains RDoc and RDoc::Markup.  RDoc is an application that
-# produces documentation for one or more Ruby source files.  We work similarly
+# produces documentation for one or more Ruby source files.  It works similarly
 # to JavaDoc, parsing the source, and extracting the definition for classes,
-# modules, and methods (along with includes and requires).  We associate with
+# modules, and methods (along with includes and requires).  It associates with
 # these optional documentation contained in the immediately preceding comment
-# block, and then render the result using a pluggable output formatter.
+# block, and then renders the result using a pluggable output formatter.
 # RDoc::Markup is a library that converts plain text into various output
 # formats.  The markup library is used to interpret the comment blocks that
 # RDoc uses to document methods, classes, and so on.
@@ -26,21 +26,21 @@ $DEBUG_RDOC = nil
 #
 # == Summary
 #
-# Once installed, you can create documentation using the 'rdoc' command
-# (the command is 'rdoc.bat' under Windows)
+# Once installed, you can create documentation using the +rdoc+ command
 #
 #   % rdoc [options] [names...]
 #
-# Type "rdoc --help" for an up-to-date option summary.
+# For an up-to-date option summary, type
+#   % rdoc --help
 #
 # A typical use might be to generate documentation for a package of Ruby
-# source (such as rdoc itself).
+# source (such as RDoc itself).
 #
 #   % rdoc
 #
 # This command generates documentation for all the Ruby and C source
 # files in and below the current directory.  These will be stored in a
-# documentation tree starting in the subdirectory 'doc'.
+# documentation tree starting in the subdirectory +doc+.
 #
 # You can make this slightly more useful for your readers by having the
 # index page contain the documentation for the primary file.  In our
@@ -52,7 +52,7 @@ $DEBUG_RDOC = nil
 # in comment blocks in the documentation this generates.
 #
 # RDoc uses file extensions to determine how to process each file.  File names
-# ending +.rb+ and <tt>.rbw</tt> are assumed to be Ruby source.  Files
+# ending +.rb+ and +.rbw+ are assumed to be Ruby source.  Files
 # ending +.c+ are parsed as C files.  All other files are assumed to
 # contain just Markup-style markup (with or without leading '#' comment
 # markers).  If directory names are passed to RDoc, they are scanned
@@ -89,9 +89,9 @@ $DEBUG_RDOC = nil
 #
 # == Documenting Source Code
 #
-# Comment blocks can be written fairly naturally, either using '#' on
+# Comment blocks can be written fairly naturally, either using +#+ on
 # successive lines of the comment, or by including the comment in
-# an =begin/=end block.  If you use the latter form, the =begin line must be
+# a =begin/=end block.  If you use the latter form, the =begin line must be
 # flagged with an RDoc tag:
 #
 #   =begin rdoc
@@ -117,7 +117,7 @@ $DEBUG_RDOC = nil
 #     # ...
 #   end
 #
-# Names of classes, source files, and any method names containing an
+# Names of classes, files, and any method names containing an
 # underscore or preceded by a hash character are automatically hyperlinked
 # from comment text to their description.
 #
@@ -159,7 +159,7 @@ $DEBUG_RDOC = nil
 # * If a paragraph starts with a "*", "-", or with "<digit>.", then it is
 #   taken to be the start of a list.  The margin in increased to be the first
 #   non-space following the list start flag.  Subsequent lines should be
-#   indented to this \new margin until the list ends.  For example:
+#   indented to this new margin until the list ends.  For example:
 #
 #      * this is a list with three paragraphs in
 #        the first item.  This is the first paragraph.
@@ -223,7 +223,7 @@ $DEBUG_RDOC = nil
 #
 #   [\<b>text...</b>]    displays word in a *bold* font
 #   [\<em>text...</em>]  displays word in an _emphasized_ font
-#   [\<i>text...</i>]    displays word in an _emphasized_ font
+#   [\\<i>text...</i>]    displays word in an <i>italicized</i> font
 #   [\<tt>text...</tt>]  displays word in a +code+ font
 #
 #   Unlike conventional Wiki markup, general markup can cross line
@@ -239,19 +239,19 @@ $DEBUG_RDOC = nil
 #   directory.
 #
 #   Hyperlinks can also be of the form <tt>label</tt>[url], in which
-#   case the label is used in the displayed text, and <tt>url</tt> is
-#   used as the target.  If <tt>label</tt> contains multiple words,
+#   case the label is used in the displayed text, and +url+ is
+#   used as the target.  If +label+ contains multiple words,
 #   put it in braces: <em>{multi word label}[</em>url<em>]</em>.
 #
 # == Directives
 #
 # [+:nodoc:+ / +:nodoc:+ all]
-#   Don't include this element in the documentation.  For classes
-#   and modules, the methods, aliases, constants, and attributes
-#   directly within the affected class or module will also be
-#   omitted.  By default, though, modules and classes within that
-#   class of module _will_ be documented.  This is turned off by
-#   adding the +all+ modifier.
+#   This directive prevents documentation for the element from
+#   being generated.  For classes and modules, the methods, aliases,
+#   constants, and attributes directly within the affected class or
+#   module also will be omitted.  By default, though, modules and
+#   classes within that class of module _will_ be documented.  This is
+#   turned off by adding the +all+ modifier.
 #   
 #     module MyModule # :nodoc:
 #       class Input
@@ -263,22 +263,22 @@ $DEBUG_RDOC = nil
 #       end
 #     end
 #
-#   In the above code, only class +MyModule::Input+ will be documented.The
-#   The :nodoc: directive is global across all files the class or module
-#   appears in, so use :stopdoc:/:startdoc: to only omit documentation for a
-#   particular set of methods, etc.
+#   In the above code, only class <tt>MyModule::Input</tt> will be documented.
+#   The +:nodoc:+ directive is global across all files for the class or module
+#   to which it applies, so use +:stopdoc:+/+:startdoc:+ to suppress
+#   documentation only for a particular set of methods, etc.
 #
 # [+:doc:+]
-#   Force a method or attribute to be documented even if it wouldn't otherwise
-#   be.  Useful if, for example, you want to include documentation of a
+#   Forces a method or attribute to be documented even if it wouldn't be
+#   otherwise.  Useful if, for example, you want to include documentation of a
 #   particular private method.
 #
 # [+:notnew:+]
 #   Only applicable to the +initialize+ instance method.  Normally RDoc
-#   assumes that the documentation and parameters for #initialize are
-#   actually for the ::new method, and so fakes out a ::new for the class.
-#   The :notnew: modifier stops this.  Remember that #initialize is protected,
-#   so you won't see the documentation unless you use the -a command line
+#   assumes that the documentation and parameters for +initialize+ are
+#   actually for the +new+ method, and so fakes out a +new+ for the class.
+#   The +:notnew:+ modifier stops this.  Remember that +initialize+ is private,
+#   so you won't see the documentation unless you use the +-a+ command line
 #   option.
 #
 # Comment blocks can contain other directives:
